Atualização do código

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cartão de visualição de produto</title>
-    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="product-preview-card-component-main/images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css" media="all">
     <link rel="stylesheet" href="estilos/mobile.css" media="screen and (orientation: portrait)">
     <link rel="stylesheet" href="estilos/desktop.css" media="screen and (orientation: landscape)">
@@ -31,7 +31,10 @@
                     #777975;">$169.99</h5>
                 </div>
                 <div>
-                    <button>Add to Cart</button>
+                    <button>
+                        <img id="carinho" src="product-preview-card-component-main/images/icon-cart.svg" alt="">
+                        Add to Cart
+                    </button>
                 </div>
             </div>
         </div>
